finished placing all blossoms

--- a/style.css
+++ b/style.css
@@ -1981,3 +1981,570 @@ body {
    -webkit-transform: rotate(315deg); /* Chrome, Safari, Opera */
    transform: rotate(315deg);
 }
+
+/* 32nd Blossom */
+
+#petal248.blossom {
+  left: 31.6em;
+  top: 28.1em;
+}
+
+#petal249.blossom {
+  left: 31.8em;
+  top: 28.4em;
+  -ms-transform: rotate(45deg); /* IE 9 */
+   -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+   transform: rotate(45deg);
+}
+
+#petal250.blossom {
+  left: 32em;
+  top: 28.6em;
+  -ms-transform: rotate(90deg); /* IE 9 */
+   -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+   transform: rotate(90deg);
+}
+
+#petal251.blossom {
+  left: 31.8em;
+  top: 29em;
+  -ms-transform: rotate(135deg); /* IE 9 */
+   -webkit-transform: rotate(135deg); /* Chrome, Safari, Opera */
+   transform: rotate(135deg);
+}
+
+#petal252.blossom {
+  left: 31.5em;
+  top: 29.3em;
+  -ms-transform: rotate(180deg); /* IE 9 */
+   -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+   transform: rotate(180deg);
+}
+
+#petal253.blossom {
+  left: 31.2em;
+  top: 29em;
+  -ms-transform: rotate(225deg); /* IE 9 */
+   -webkit-transform: rotate(225deg); /* Chrome, Safari, Opera */
+   transform: rotate(225deg);
+}
+
+#petal254.blossom {
+  left: 31em;
+  top: 28.7em;
+  -ms-transform: rotate(270deg); /* IE 9 */
+   -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+   transform: rotate(270deg);
+}
+
+#petal255.blossom {
+  left: 31.2em;
+  top: 28.3em;
+  -ms-transform: rotate(315deg); /* IE 9 */
+   -webkit-transform: rotate(315deg); /* Chrome, Safari, Opera */
+   transform: rotate(315deg);
+}
+
+/* 33rd Blossom */
+
+#petal256.blossom {
+  left: 32.5em;
+  top: 30.1em;
+}
+
+#petal257.blossom {
+  left: 32.6em;
+  top: 30.5em;
+  -ms-transform: rotate(45deg); /* IE 9 */
+   -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+   transform: rotate(45deg);
+}
+
+#petal258.blossom {
+  left: 32.8em;
+  top: 30.7em;
+  -ms-transform: rotate(90deg); /* IE 9 */
+   -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+   transform: rotate(90deg);
+}
+
+#petal259.blossom {
+  left: 32.6em;
+  top: 31.2em;
+  -ms-transform: rotate(135deg); /* IE 9 */
+   -webkit-transform: rotate(135deg); /* Chrome, Safari, Opera */
+   transform: rotate(135deg);
+}
+
+#petal260.blossom {
+  left: 32.5em;
+  top: 31.3em;
+  -ms-transform: rotate(180deg); /* IE 9 */
+   -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+   transform: rotate(180deg);
+}
+
+#petal261.blossom {
+  left: 32em;
+  top: 31.2em;
+  -ms-transform: rotate(225deg); /* IE 9 */
+   -webkit-transform: rotate(225deg); /* Chrome, Safari, Opera */
+   transform: rotate(225deg);
+}
+
+#petal262.blossom {
+  left: 31.8em;
+  top: 30.8em;
+  -ms-transform: rotate(270deg); /* IE 9 */
+   -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+   transform: rotate(270deg);
+}
+
+#petal263.blossom {
+  left: 32em;
+  top: 30.5em;
+  -ms-transform: rotate(315deg); /* IE 9 */
+   -webkit-transform: rotate(315deg); /* Chrome, Safari, Opera */
+   transform: rotate(315deg);
+}
+
+/* 34th Blossom */
+
+#petal264.blossom {
+  left: 32.6em;
+  top: 30.9em;
+}
+
+#petal265.blossom {
+  left: 32.8em;
+  top: 31.2em;
+  -ms-transform: rotate(45deg); /* IE 9 */
+   -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+   transform: rotate(45deg);
+}
+
+#petal266.blossom {
+  left: 33em;
+  top: 31.5em;
+  -ms-transform: rotate(90deg); /* IE 9 */
+   -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+   transform: rotate(90deg);
+}
+
+#petal267.blossom {
+  left: 32.8em;
+  top: 31.7em;
+  -ms-transform: rotate(135deg); /* IE 9 */
+   -webkit-transform: rotate(135deg); /* Chrome, Safari, Opera */
+   transform: rotate(135deg);
+}
+
+#petal268.blossom {
+  left: 32.6em;
+  top: 31.7em;
+  -ms-transform: rotate(180deg); /* IE 9 */
+   -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+   transform: rotate(180deg);
+}
+
+#petal269.blossom {
+  left: 32.2em;
+  top: 31.5em;
+  -ms-transform: rotate(225deg); /* IE 9 */
+   -webkit-transform: rotate(225deg); /* Chrome, Safari, Opera */
+   transform: rotate(225deg);
+}
+
+#petal270.blossom {
+  left: 32em;
+  top: 31.3em;
+  -ms-transform: rotate(270deg); /* IE 9 */
+   -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+   transform: rotate(270deg);
+}
+
+#petal271.blossom {
+  left: 32.2em;
+  top: 31em;
+  -ms-transform: rotate(315deg); /* IE 9 */
+   -webkit-transform: rotate(315deg); /* Chrome, Safari, Opera */
+   transform: rotate(315deg);
+}
+
+/* 35th Blossom */
+
+#petal272.blossom {
+  left: 31em;
+  top: 31.3em;
+}
+
+#petal273.blossom {
+  left: 31.4em;
+  top: 31.5em;
+  -ms-transform: rotate(45deg); /* IE 9 */
+   -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+   transform: rotate(45deg);
+}
+
+#petal274.blossom {
+  left: 31.6em;
+  top: 31.7em;
+  -ms-transform: rotate(90deg); /* IE 9 */
+   -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+   transform: rotate(90deg);
+}
+
+#petal275.blossom {
+  left: 31.4em;
+  top: 32.2em;
+  -ms-transform: rotate(135deg); /* IE 9 */
+   -webkit-transform: rotate(135deg); /* Chrome, Safari, Opera */
+   transform: rotate(135deg);
+}
+
+#petal276.blossom {
+  left: 31em;
+  top: 32.5em;
+  -ms-transform: rotate(180deg); /* IE 9 */
+   -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+   transform: rotate(180deg);
+}
+
+#petal277.blossom {
+  left: 30.7em;
+  top: 32.2em;
+  -ms-transform: rotate(225deg); /* IE 9 */
+   -webkit-transform: rotate(225deg); /* Chrome, Safari, Opera */
+   transform: rotate(225deg);
+}
+
+#petal278.blossom {
+  left: 30.4em;
+  top: 32em;
+  -ms-transform: rotate(270deg); /* IE 9 */
+   -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+   transform: rotate(270deg);
+}
+
+#petal279.blossom {
+  left: 30.5em;
+  top: 31.4em;
+  -ms-transform: rotate(315deg); /* IE 9 */
+   -webkit-transform: rotate(315deg); /* Chrome, Safari, Opera */
+   transform: rotate(315deg);
+}
+
+/* 36th Blossom */
+
+#petal280.blossom {
+  left: 29em;
+  top: 31.5em;
+}
+
+#petal281.blossom {
+  left: 29.4em;
+  top: 31.8em;
+  -ms-transform: rotate(45deg); /* IE 9 */
+   -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+   transform: rotate(45deg);
+}
+
+#petal282.blossom {
+  left: 29.6em;
+  top: 32em;
+  -ms-transform: rotate(90deg); /* IE 9 */
+   -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+   transform: rotate(90deg);
+}
+
+#petal283.blossom {
+  left: 29.4em;
+  top: 32.2em;
+  -ms-transform: rotate(135deg); /* IE 9 */
+   -webkit-transform: rotate(135deg); /* Chrome, Safari, Opera */
+   transform: rotate(135deg);
+}
+
+#petal284.blossom {
+  left: 29.2em;
+  top: 32.5em;
+  -ms-transform: rotate(180deg); /* IE 9 */
+   -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+   transform: rotate(180deg);
+}
+
+#petal285.blossom {
+  left: 28.8em;
+  top: 32.2em;
+  -ms-transform: rotate(225deg); /* IE 9 */
+   -webkit-transform: rotate(225deg); /* Chrome, Safari, Opera */
+   transform: rotate(225deg);
+}
+
+#petal286.blossom {
+  left: 28.4em;
+  top: 32em;
+  -ms-transform: rotate(270deg); /* IE 9 */
+   -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+   transform: rotate(270deg);
+}
+
+#petal287.blossom {
+  left: 28.6em;
+  top: 31.6em;
+  -ms-transform: rotate(315deg); /* IE 9 */
+   -webkit-transform: rotate(315deg); /* Chrome, Safari, Opera */
+   transform: rotate(315deg);
+}
+
+/* 37th Blossom */
+
+#petal288.blossom {
+  left: 25em;
+  top: 31.3em;
+}
+
+#petal289.blossom {
+  left: 25.3em;
+  top: 31.5em;
+  -ms-transform: rotate(45deg); /* IE 9 */
+   -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+   transform: rotate(45deg);
+}
+
+#petal290.blossom {
+  left: 25.5em;
+  top: 31.8em;
+  -ms-transform: rotate(90deg); /* IE 9 */
+   -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+   transform: rotate(90deg);
+}
+
+#petal291.blossom {
+  left: 25.2em;
+  top: 32.1em;
+  -ms-transform: rotate(135deg); /* IE 9 */
+   -webkit-transform: rotate(135deg); /* Chrome, Safari, Opera */
+   transform: rotate(135deg);
+}
+
+#petal292.blossom {
+  left: 25em;
+  top: 32.3em;
+  -ms-transform: rotate(180deg); /* IE 9 */
+   -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+   transform: rotate(180deg);
+}
+
+#petal293.blossom {
+  left: 24.6em;
+  top: 32em;
+  -ms-transform: rotate(225deg); /* IE 9 */
+   -webkit-transform: rotate(225deg); /* Chrome, Safari, Opera */
+   transform: rotate(225deg);
+}
+
+#petal294.blossom {
+  left: 24.3em;
+  top: 31.8em;
+  -ms-transform: rotate(270deg); /* IE 9 */
+   -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+   transform: rotate(270deg);
+}
+
+#petal295.blossom {
+  left: 24.5em;
+  top: 31.5em;
+  -ms-transform: rotate(315deg); /* IE 9 */
+   -webkit-transform: rotate(315deg); /* Chrome, Safari, Opera */
+   transform: rotate(315deg);
+}
+
+/* 38th Blossom */
+
+#petal296.blossom {
+  left: 26em;
+  top: 33.6em;
+}
+
+#petal297.blossom {
+  left: 26.3em;
+  top: 33.9em;
+  -ms-transform: rotate(45deg); /* IE 9 */
+   -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+   transform: rotate(45deg);
+}
+
+#petal298.blossom {
+  left: 26.6em;
+  top: 34.2em;
+  -ms-transform: rotate(90deg); /* IE 9 */
+   -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+   transform: rotate(90deg);
+}
+
+#petal299.blossom {
+  left: 26.3em;
+  top: 34.5em;
+  -ms-transform: rotate(135deg); /* IE 9 */
+   -webkit-transform: rotate(135deg); /* Chrome, Safari, Opera */
+   transform: rotate(135deg);
+}
+
+#petal300.blossom {
+  left: 26em;
+  top: 34.7em;
+  -ms-transform: rotate(180deg); /* IE 9 */
+   -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+   transform: rotate(180deg);
+}
+
+#petal301.blossom {
+  left: 25.7em;
+  top: 34.4em;
+  -ms-transform: rotate(225deg); /* IE 9 */
+   -webkit-transform: rotate(225deg); /* Chrome, Safari, Opera */
+   transform: rotate(225deg);
+}
+
+#petal302.blossom {
+  left: 25.3em;
+  top: 34.1em;
+  -ms-transform: rotate(270deg); /* IE 9 */
+   -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+   transform: rotate(270deg);
+}
+
+#petal303.blossom {
+  left: 25.5em;
+  top: 33.8em;
+  -ms-transform: rotate(315deg); /* IE 9 */
+   -webkit-transform: rotate(315deg); /* Chrome, Safari, Opera */
+   transform: rotate(315deg);
+}
+
+/* 39th Blossom */
+
+#petal304.blossom {
+  left: 26.3em;
+  top: 35.6em;
+}
+
+#petal305.blossom {
+  left: 26.7em;
+  top: 35.8em;
+  -ms-transform: rotate(45deg); /* IE 9 */
+   -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+   transform: rotate(45deg);
+}
+
+#petal306.blossom {
+  left: 27em;
+  top: 36.1em;
+  -ms-transform: rotate(90deg); /* IE 9 */
+   -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+   transform: rotate(90deg);
+}
+
+#petal307.blossom {
+  left: 26.8em;
+  top: 36.4em;
+  -ms-transform: rotate(135deg); /* IE 9 */
+   -webkit-transform: rotate(135deg); /* Chrome, Safari, Opera */
+   transform: rotate(135deg);
+}
+
+#petal308.blossom {
+  left: 26.5em;
+  top: 36.7em;
+  -ms-transform: rotate(180deg); /* IE 9 */
+   -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+   transform: rotate(180deg);
+}
+
+#petal309.blossom {
+  left: 26.2em;
+  top: 36.4em;
+  -ms-transform: rotate(225deg); /* IE 9 */
+   -webkit-transform: rotate(225deg); /* Chrome, Safari, Opera */
+   transform: rotate(225deg);
+}
+
+#petal310.blossom {
+  left: 26em;
+  top: 36.1em;
+  -ms-transform: rotate(270deg); /* IE 9 */
+   -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+   transform: rotate(270deg);
+}
+
+#petal311.blossom {
+  left: 26.2em;
+  top: 35.8em;
+  -ms-transform: rotate(315deg); /* IE 9 */
+   -webkit-transform: rotate(315deg); /* Chrome, Safari, Opera */
+   transform: rotate(315deg);
+}
+
+/* 40th Blossom */
+
+#petal312.blossom {
+  left: 27.9em;
+  top: 35.5em;
+}
+
+#petal313.blossom {
+  left: 28.2em;
+  top: 35.7em;
+  -ms-transform: rotate(45deg); /* IE 9 */
+   -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+   transform: rotate(45deg);
+}
+
+#petal314.blossom {
+  left: 28.5em;
+  top: 36em;
+  -ms-transform: rotate(90deg); /* IE 9 */
+   -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+   transform: rotate(90deg);
+}
+
+#petal315.blossom {
+  left: 28.2em;
+  top: 36.3em;
+  -ms-transform: rotate(135deg); /* IE 9 */
+   -webkit-transform: rotate(135deg); /* Chrome, Safari, Opera */
+   transform: rotate(135deg);
+}
+
+#petal316.blossom {
+  left: 27.9em;
+  top: 36.6em;
+  -ms-transform: rotate(180deg); /* IE 9 */
+   -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+   transform: rotate(180deg);
+}
+
+#petal317.blossom {
+  left: 27.5em;
+  top: 36.3em;
+  -ms-transform: rotate(225deg); /* IE 9 */
+   -webkit-transform: rotate(225deg); /* Chrome, Safari, Opera */
+   transform: rotate(225deg);
+}
+
+#petal318.blossom {
+  left: 27.3em;
+  top: 36em;
+  -ms-transform: rotate(270deg); /* IE 9 */
+   -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+   transform: rotate(270deg);
+}
+
+#petal319.blossom {
+  left: 27.4em;
+  top: 35.6em;
+  -ms-transform: rotate(315deg); /* IE 9 */
+   -webkit-transform: rotate(315deg); /* Chrome, Safari, Opera */
+   transform: rotate(315deg);
+}
